@@ -1,3 +1,5 @@
+- Fix local bridge notification messages.
+
 0.14.3 - 20111210
 =================
 
